--- a/hungarian.html
+++ b/hungarian.html
@@ -1,8 +1,7 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Murder game initializer</title>
+    <title>Gyilkosos játék sorsolóprogramja</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name=viewport content="width=device-width, initial-scale=1">
     <script src="jquery.min.js" type="text/javascript"></script>
