--- a/hungarian.html
+++ b/hungarian.html
@@ -4,7 +4,7 @@
     <title>Gyilkosos játék sorsolóprogramja</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <script src="jquery.min.js" type="text/javascript"></script>
+    <script src="lib/jquery.min.js" type="text/javascript"></script>
     <script src="config.js" type="text/javascript"></script>
     <script src="draw.js" type="text/javascript"></script>
 
