--- a/src/hungarian.html
+++ b/src/hungarian.html
@@ -4,9 +4,11 @@
     <title>Gyilkosos játék sorsolóprogramja</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name=viewport content="width=device-width, initial-scale=1">
-    <script src="lib/jquery.min.js" type="text/javascript"></script>
-    <script src="config.js" type="text/javascript"></script>
-    <script src="draw.js" type="text/javascript"></script>
+    <script src="../lib/jquery.min.js" type="text/javascript"></script>
+    <script src="../configs/config.js" type="text/javascript"></script>
+    <script src="utilities.js" type="text/javascript"></script>
+    <script src="draw-players.js" type="text/javascript"></script>
+    <script src="ui.js" type="text/javascript"></script>
 
     <body>
         <p>Kedves <span id="assasin" style="font-size:200%;"></span>!</p>
